Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48349

Failure to link code generated by ICC 16 against MSVC 2013's QtCore

XMLWordPrintable

    • 94fb5037696a6022a56f947528b4570be5069369 (5.6), dc716f2dc2df06c40b3709ded81a5b7588f53e7a (5.5.1)

      When you use Qt compiled with MSVC 2013 and try to link certain code using QString::toLower, QString::toUpper, QString::trimmed, the link will fail with error:

      error LNK2001: unresolved external symbol "__declspec(dllimport) public: ?? :: ?? ::XZ::V1" (__imp_?toUpper@QString@@QEHAA?AV1@XZ)
      

      If you pass the decorated name to MSVC 2015's undname.exe tool, it prints:

      Undecoration of :- "?toUpper@QString@@QEHAA?AV1@XZ"
      is :- "public: class QString __cdecl QString::toUpper(void) __ptr64&& "
      

      The reason for the incompatibility is that ICC 16 does know about ref-qualified member functions and tries to call them in the DLL (see the "dllimport" part).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            thiago Thiago Macieira
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes