Mark ref-qualified members as always inline

MSVC and ICC on Windows always make calls to the dllexport'ed out-of-
line copy of an inline function when compiling in debug mode. This
creates an incompatibility when a compiler that understands ref-
qualified member functions (such as ICC) is used to compile code using a
DLL that was compiled with a compiler that doesn't understand (such as
MSVC 2013).

Task-number: QTBUG-48349
Change-Id: I42e7ef1a481840699a8dffff14053b7998a2a6bb
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>

cregit: 94fb5037696a6022a56f947528b4570be5069369 https://github.com/qt/qtbase/commit/94fb5037696a6022a56f947528b4570be5069369